# varcall

./: .gitignore  README.md  __init__.py  notes.md  pyproject.toml  themes.txt
modules/: Bcftools_widgets.py  Help.md  Help.py  Home_widgets.py  Pipeline_widgets.py  Samtools_widgets.py  YesOrNo.py  __init__.py  exec_func.py  logging.py  test.py  widgets.py
modules/Help/: Help.py
modules/exec/: common.py  hometab.py  samtools.py  samtools_asyc.py
modules/exec_func/: bcftools_funcs.py  common_funcs.py  hometab_funcs.py  samtools_asyc.py  samtools_funcs.py
modules/tests/: planned_abstraction.py  wildcard_test.py
modules/widgets/: Bcftools.py  Home.py  Pipeline.py
pyVarcall-v0.1/modules/: Help.md  Help.py  logging_util.py
pyVarcall-v0.1/src/: Varcall.css  Varcall.py
src/: __init__.py  main.css  main.py  pyVarcall.css  pyVarcall.py  pyVarcall.py.bak(before_modularising)
src/varcall/: __about__.py  __init__.py  __main__.py  app.css  app.py  main.css  main.py
src/varcall/components/: file_suggester.py  input_block.py  yes_or_no.py
src/varcall/config/: config.yaml  process_dict.py  yaml_parcing.py
src/varcall/defaults/: __init__.py  defaults_dir.py  defaults_files.py
src/varcall/help/: __init__.py  help.md
src/varcall/modules/: __init__.py
src/varcall/modules/Help/: Help.md  Help.py
src/varcall/modules/exec/: __init__.py  bcftools.py  command.py  common.py  hometab.py  samtools.py  samtools_asyc.py  utils.py
src/varcall/modules/widgets/: Bcftools.py  Home.py  Pipeline.py  Samtools.py  YesOrNo.py
src/varcall/process/: process_class.py  process_dict.py
tests/: .gitignore  main_test.sh  pytest.ini  test_basename.py  test_command_class.py  test_find_matching_files.py  test_get_default_file.py  test_get_output.py  test_main.py  tk.py
