[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "varcall"
version = "0.0.1"
authors = [
  { name="Vidyasagar", email="vidyasagar0405.com" },
]
description = "a variant calling tui wrapper"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/vidyasagar0405/varcall"
Issues = "https://github.com/vidyasagar0405/varcall/issues"
